# CMakeTutorial

./: README.md
1_minimal_subject/: CMakeLists.txt  main.cpp
